Fix delete button appearance on mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -106,10 +106,8 @@ button:focus {
   font-size: 1.2em;
   cursor: pointer;
   border: none;
-  background: linear-gradient(to right, #590fb7, #ff0076);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #900aa1;
+  background: none;
 }
 
 .delete:hover {
@@ -128,7 +126,6 @@ button:focus {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  text-align: left;
   width: 85vw;
   color: #000000;
   text-decoration: none;
